<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WorkPreferencesFragment"
    android:padding="10dp">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/position"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/work_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPosition" />

    <CheckBox
        android:id="@+id/cbFullTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/full_time"
        app:layout_constraintBottom_toTopOf="@+id/cbPartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <CheckBox
        android:id="@+id/cbPartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/part_time"
        app:layout_constraintBottom_toTopOf="@+id/cbRemote"
        app:layout_constraintStart_toStartOf="@+id/cbFullTime"
        app:layout_constraintTop_toBottomOf="@+id/cbFullTime" />

    <CheckBox
        android:id="@+id/cbContractor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contractor"
        app:layout_constraintBottom_toTopOf="@+id/cbFreelancer"
        app:layout_constraintStart_toStartOf="@+id/cbRemote"
        app:layout_constraintTop_toBottomOf="@+id/cbRemote" />

    <CheckBox
        android:id="@+id/cbRemote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote"
        app:layout_constraintBottom_toTopOf="@+id/cbContractor"
        app:layout_constraintStart_toStartOf="@+id/cbPartTime"
        app:layout_constraintTop_toBottomOf="@+id/cbPartTime" />

    <CheckBox
        android:id="@+id/cbFreelancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freelancer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cbContractor"
        app:layout_constraintTop_toBottomOf="@+id/cbContractor" />


</androidx.constraintlayout.widget.ConstraintLayout>